# MaRS-Summer-Tasks

./: README.md
install/: local_setup.sh  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: package.sh
install/my_package/share/my_package/: package.ps1  package.sh  package.xml
install/my_package_cpp/share/my_package_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/py_pubsub/share/py_pubsub/: package.sh
install/turtlesim/share/turtlesim/rust/: Cargo.toml
log/: latest_build
src/cpp_pubsub/: CMakeLists.txt
src/my_package/: setup.py
src/my_package_cpp/: CMakeLists.txt  package.xml
src/my_package_cpp/src/: my_node.cpp
src/py_pubsub/: package.xml  setup.py
src/rover_robot/: CMakeLists.txt  package.xml
src/rover_robot/config/: controllers.yaml
src/rover_robot/launch/: sim.launch.py
src/rover_robot/urdf/: robot.urdf.xacro
src/rover_robot/worlds/: obstacle_course.sdf
src/turtle_avoidance/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/turtle_avoidance/action/: ExecuteCircle.action
src/turtle_avoidance/launch/: avoidance_launch.py
src/turtle_avoidance/turtle_avoidance/: circle_patrol_client.py  circle_patrol_server.py  collision_avoidance_node.py
src/turtle_interfaces/: CMakeLists.txt  package.xml
src/turtle_safety/: package.xml  setup.cfg  setup.py
src/turtle_safety/launch/: avoidance_launch.py
src/turtle_safety/turtle_safety/: circle_patrol_client.py  circle_patrol_server.py  collision_avoidance_node.py
(+10 files in other folders)
