[package]
name = "turtlesim"
version = "1.4.3"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
action_msgs = "*"
unique_identifier_msgs = "*"
builtin_interfaces = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'action_msgs/serde', 'unique_identifier_msgs/serde', 'builtin_interfaces/serde']

[package.metadata.rclrs]
reexport = true
